# hellorust

./: Cargo.toml  build.rs  wrapper.h  wrapper.hpp
lib/: bindings.rs
src/: cppmath.rs  lib.rs  main.rs  mygeometry.cpp  mygeometry.hpp  mymath.cpp  mymath.hpp
