[package]
name = "hellorust"
version = "0.1.0"
authors = ["virtustron <virtustron@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"         # first crate to test

[build-dependencies]   # especially for build.rs and bindgen
bindgen = "0.59.1"  
cc = "1.0.70"
pkg-config = "0.3.20"
